fixed white space for banner
fixed white space for banner

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -400,4 +400,8 @@ tr:nth-child(even){background-color: #e6e6e6}
 		display:none;
 	}
 
+	.disappear{
+		display: none;
+	}
+
 }
